--- a/index.html
+++ b/index.html
@@ -138,16 +138,12 @@
             <option value="1" selected>1 комната</option>
             <option value="2">2 комнаты</option>
             <option value="3">3 комнаты</option>
-            <option value="4">4 комнаты</option>
-            <option value="5">5 комнат</option>
             <option value="100">100 комнат</option>
           </select>
         </fieldset>
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="capacity">Количество мест</label>
           <select id="capacity" name="capacity">
-            <option value="5">для 5 гостей</option>
-            <option value="4">для 4 гостей</option>
             <option value="3" selected>для 3 гостей</option>
             <option value="2">для 2 гостей</option>
             <option value="1">для 1 гостя</option>
@@ -252,6 +248,7 @@
     </div>
   </template>
 
+  <script src="js/data.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
