--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
   <script src="js/load.js"></script>
   <script src="js/card.js"></script>
   <script src="js/move.js"></script>
+  <script src="js/upload.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
